4.3
Evil Twin attack added: captive portal
Some language strings changed
Now initial forwarding state is restored on exit

4.22
Portuguese translation updated (Thank you to "Luan")
Paypal donate button added on README.md
Bitcoin hash changed and bitcoin donate button added on README.md
Tested compatibility with Kali Linux 2016.2

4.21
Greek language translation added (Thank you to "xtonousou")

4.2
Evil Twin attack added: with integrated sniffing using sslstrip
Evil Twin control window beautified and optimized for small windows

4.11
Russian language translation added (Thank you to "MiAl")

4.1
Evil Twin attack added: with integrated sniffing
Log parsing for Evil Twin attack with sniffing

4.03
Some compatibility improvements for Raspberry Pi Raspbian Linux
Additional check for systems which use airmon-zc, now checks for lspci to avoid errors
Compatibility extended to OpenMandriva Linux
Compatibility extended to Kali arm version on Raspberry Pi

4.02
New windows sizes calculation method for better viewing even in small resolutions. Dynamic system
Fixed bug restarting Network Manager on Arch Linux
Fixed bug restarting Network Manager using debug mode on some distros
Suggestion added about possible packet names after failing a dependency check

4.01
Fixed bug cleaning temp files for Evil Twin attack

4.0
Evil Twin attack added: Only AP to sniff with external sniffer
Created under construction message for non finished menu options
README.md beautified
Screen resolution correction feature added for some distros
Some minor improvements and bugfixes

3.44
Screen resolution detection for optimal windows viewing
Some language strings changed
Deleted ods translations file. It was impractical

3.43
Function created to generate dynamic separators on menus
Some language strings changed

3.42
Compatibility extended to Arch Linux
Compatibility extended to Raspbian Linux for Raspberry Pi
Additional check for systems which use airmon-zc, now checks for ethtool to avoid errors